[package]
name = "prime-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "8.0.0"
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"
llvm-sys = "211.0.0"
clap = { version = "4.5.51", features = ["derive"] }
notify = "8.2.0"
tower-lsp-server = "0.22.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "io-std"] }
serde = { version = "1.0.228", features = ["derive"] }
