[package]
name = "prime-lang"
version = "0.1.0"
edition = "2024"

[features]
default = ["std-builtins"]
std-builtins = []

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"
llvm-sys = "211.0.0"
notify = "8.2.0"
tower-lsp-server = "0.23.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "io-std"] }
serde = { version = "1.0.228", features = ["derive"] }
nom = "8.0.0"
serde_json = "1.0.145"
toml = "0.9.8"
toml_edit = "0.23.7"

[dev-dependencies]
tempfile = "3.23.0"
insta = { version = "1.39.0", features = ["glob"] }
