[package]
name = "tree-sitter-prime-lang"
description = "PrimeLang"
version = "0.1.0"
authors = ["Andrej Soldo <soldo.andrej@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "prime-lang"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/asoldo/prime_lang_treesitter"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
